# sose2026-nlp

./: .gitignore  README.md  pyproject.toml
.github/scripts/: generate_quiz.py
.github/workflows/: llm-review.yml
assignments/01_assignment/: 01_assignment.md  01_assignment.py
assignments/02_assignment/: 02_assignment.md  02_assignment.py
assignments/03_assignment/: 03_assignment.md  03_assignment.py
assignments/04_assignment/: 04_assignment.md  04_assignment.py
data/billboard_top100/: FIELDS.md
notebooks/: 01_intro.py  02_tokenization.py  05_text_classification.py  linguistic_annotations.py  normalization.py  pattern_matching.py  regex_tutorial.py  scikit_learn_tutorial.py  text_classification.py  vectorization.py
